hermes_fuzz_executed_few_shot/fuzz_23_execution
'use strict';
 
<fim_middle> 
"console.log(new Promise((resolve, reject) => { console.log(0) } ); console.log(arguments) ); console.log(Symbol.description);
"use strict" ; 
"console.log(new Promise((resolve, reject) => { console.log(1) } ); console.log(arguments) ); console.log(Symbol.description);
"use strict" ; 
"console.log(new Promise((resolve, reject) => { console.log(2) } ); console.log(arguments) ); console.log(Symbol.description);


Execution Output ------------------:
test.js:3:1: error: invalid expression (possible JSX: pass -parse-jsx to parse)
<fim_middle> 
^
